dist/1.0/bin/sample/retrieveUnpackaged/objects/CContract__c.object
<CustomObject>
    <description>Custom Contract object</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Relation to Account</description>
        <inlineHelpText>Relation to Account</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Account Name)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivatedBy__c</fullName>
        <description>Person who activated this Agreement/Annex/Service Order</description>
        <inlineHelpText>Person who activated this Agreement/Annex/Service Order</inlineHelpText>
        <label>Activated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivatedDate__c</fullName>
        <description>Date of Agreement/Annex/Service Order activation</description>
        <inlineHelpText>Date of Agreement/Annex/Service Order activation</inlineHelpText>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_ID__c</fullName>
        <description>Id of approval process of document in external system like xFLOWer in HU</description>
        <inlineHelpText>Id of approval process of document in external system like xFLOWer in HU</inlineHelpText>
        <label>Approval ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_System__c</fullName>
        <description>Link to external system with concatenated id of appropriate record</description>
        <formula>IF ( !ISBLANK(Approval_ID__c) ,HYPERLINK (&quot;http://icd.gtsdatanet.hu/xflower/prod/index.php?show=CONTACT;&quot;&amp;(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Approval_ID__c,&quot;/&quot;, &quot;;&quot;),&quot;-&quot;, &quot;;&quot;),&quot; &quot;,&quot;&quot; )), &quot;Go to: &quot;&amp;SUBSTITUTE(Approval_ID__c,&quot; &quot;,&quot;&quot;),&quot;xFLOWer&quot;),&quot;Approval ID is required&quot;)</formula>
        <inlineHelpText>Link to external system with concatenated id of appropriate record. i.e. to Case in xFLOWer in HU</inlineHelpText>
        <label>Link to Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Billing Account related to the Agreement/Annex/Service Order</description>
        <inlineHelpText>Billing Account related to the Agreement/Annex/Service Order</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>CContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address2__c</fullName>
        <description>Registration address assigned to this document</description>
        <inlineHelpText>Registration address assigned to this document</inlineHelpText>
        <label>Registration Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contracts (Registration Address)</relationshipLabel>
        <relationshipName>CContracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <description>Billing address from address book</description>
        <inlineHelpText>Billing address from address book</inlineHelpText>
        <label>Billing Address</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Contracts (Billing Address)</relationshipLabel>
        <relationshipName>CContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Apartment_No__c</fullName>
        <description>Registration Apartment No</description>
        <inlineHelpText>Registration Apartment No</inlineHelpText>
        <label>Registration Apartment No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Building_Block__c</fullName>
        <description>Registration Building/Block</description>
        <inlineHelpText>Registration Building/Block</inlineHelpText>
        <label>Registration Building/Block</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <description>Registration City</description>
        <inlineHelpText>Registration City</inlineHelpText>
        <label>Registration City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <description>Registration Contact</description>
        <inlineHelpText>Registration Contact</inlineHelpText>
        <label>Registration Contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>Registration Country</description>
        <inlineHelpText>Registration Country</inlineHelpText>
        <label>Registration Country</label>
        <picklist>
            <picklistValues>
                <fullName>Aaland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Customer_Name__c</fullName>
        <description>Registration Customer Name</description>
        <inlineHelpText>Registration Customer Name</inlineHelpText>
        <label>Registration Customer Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Floor__c</fullName>
        <description>Registration Floor</description>
        <inlineHelpText>Registration Floor</inlineHelpText>
        <label>Registration Floor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <description>Registration Phone</description>
        <inlineHelpText>Registration Phone</inlineHelpText>
        <label>Registration Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Postal__c</fullName>
        <description>Registration Postal</description>
        <inlineHelpText>Registration Postal</inlineHelpText>
        <label>Registration Postal</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Room_No__c</fullName>
        <description>Registration Room No</description>
        <inlineHelpText>Registration Room No</inlineHelpText>
        <label>Registration Room No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <description>Registration State/Province</description>
        <inlineHelpText>Registration State/Province</inlineHelpText>
        <label>Registration State/Province</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_1__c</fullName>
        <description>Registration Street (first part)</description>
        <inlineHelpText>Registration Street (first part)</inlineHelpText>
        <label>Registration Street 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_2__c</fullName>
        <description>Registration Street (second part)</description>
        <inlineHelpText>Registration Street (second part)</inlineHelpText>
        <label>Registration Street 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_No__c</fullName>
        <description>Registration Street No</description>
        <inlineHelpText>Registration Street No</inlineHelpText>
        <label>Registration Street No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Binding_Period__c</fullName>
        <description>Binding period agreed upon for this Agreement/Annex/Service Order</description>
        <inlineHelpText>Binding period agreed upon for this Agreement/Annex/Service Order</inlineHelpText>
        <label>Binding Period</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>CContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompanySignedDate__c</fullName>
        <description>Date of signing the Agreement/Annex/Service Order by a company</description>
        <inlineHelpText>Date of signing the Agreement/Annex/Service Order by a company</inlineHelpText>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanySigned__c</fullName>
        <description>Relation to company&apos;s account for a company that signed this Agreement/Annex/Service Order</description>
        <inlineHelpText>Relation to company&apos;s account for a company that signed this Agreement/Annex/Service Order</inlineHelpText>
        <label>Company Signed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactPerson__c</fullName>
        <description>Account&apos;s Contact Person responsible for this Contract</description>
        <inlineHelpText>Account&apos;s Contact Person responsible for this Contract</inlineHelpText>
        <label>Representing Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <description>Technical field; document&apos;s autonumber</description>
        <displayFormat>{00000000}</displayFormat>
        <inlineHelpText>Technical field; generated automatically;</inlineHelpText>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ContractTerm__c</fullName>
        <description>Term of document&apos;s validity</description>
        <inlineHelpText>Term of document&apos;s  validity</inlineHelpText>
        <label>Contract Term (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Source__c</fullName>
        <description>Filled if Agreement/Annex/Service Order is created from Extranet</description>
        <inlineHelpText>Filled if Agreement/Annex/Service Order is created from Extranet</inlineHelpText>
        <label>Contract Source</label>
        <picklist>
            <picklistValues>
                <fullName>Extranet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerSignedDate__c</fullName>
        <description>Date of the customer&apos;s signing of the Agreement/Annex/Service Order</description>
        <inlineHelpText>Date of the customer&apos;s signing of the Agreement/Annex/Service Order</inlineHelpText>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerSignedTitle__c</fullName>
        <description>Title of the customer signing the Agreement/Annex/Service Order</description>
        <inlineHelpText>Title of the customer signing the Agreement/Annex/Service Order</inlineHelpText>
        <label>Customer Signed Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSigned__c</fullName>
        <description>Customer that signed the Agreement/Annex/Service Order</description>
        <inlineHelpText>Customer that signed the Agreement/Annex/Service Order</inlineHelpText>
        <label>Customer Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Customer Signed By)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Additional description</description>
        <inlineHelpText>Additional description</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <description>Technical field; Link to this dicument displayed on related lists</description>
        <formula>HYPERLINK(&apos;/&apos;+Id, Document_Number__c, &apos;_self&apos;)</formula>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>Document No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <description>Automatically generated number of Agreement, Annex or SOF</description>
        <inlineHelpText>Automatically generated number of Agreement, Annex or SOF</inlineHelpText>
        <label>Document Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact__c</fullName>
        <description>Extranet User (SFDC Contact) which has modified record</description>
        <inlineHelpText>Extranet User (SFDC Contact) which has modified record</inlineHelpText>
        <label>Last Modified by Extranet Contact</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Contracts (Last Modified by Extranet Contact)</relationshipLabel>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Txt__c</fullName>
        <description>Extranet User (not represented in SFDC) which modified record</description>
        <inlineHelpText>Extranet User (not represented in SFDC) which modified record</inlineHelpText>
        <label>Last_Modified_By_Ext_Txt</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_contract_number__c</fullName>
        <description>Document&apos;s number from external system(s)</description>
        <inlineHelpText>Document&apos;s number from external system(s)</inlineHelpText>
        <label>Local contract number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Relation to Opportunity</description>
        <inlineHelpText>Relation to Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>CContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Relation to Order</description>
        <inlineHelpText>Relation to Order</inlineHelpText>
        <label>Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerExpirationNotice__c</fullName>
        <description>Amount of time before document&apos;s expiration used to notify the document&apos;s owner</description>
        <inlineHelpText>Amount of time before document&apos;s expiration used to notify the document&apos;s owner</inlineHelpText>
        <label>Owner Expiration Notice</label>
        <picklist>
            <picklistValues>
                <fullName>15 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Agreement__c</fullName>
        <description>Technical field used for document numbering; Related parent agreement</description>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>Parent Agreement</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Contracts (Parent Agreement)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Contract__c</fullName>
        <description>Related Parent Contract</description>
        <inlineHelpText>Related Parent Contract</inlineHelpText>
        <label>Parent Contract (custom)</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Owning_Agreement__c</fullName>
        <description>Partner Account owning agrement</description>
        <inlineHelpText>Partner Company which is currently assigned to GTS Customer with whom contract is signed.</inlineHelpText>
        <label>Partner Owning Agreement</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Partner Owning Agreement)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Signed_By__c</fullName>
        <description>Contact assigned to Partner Account which represents person signing contract</description>
        <inlineHelpText>Contact assigned to Partner Account which represents person signing contract</inlineHelpText>
        <label>Partner Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Partner Signed By)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Signing__c</fullName>
        <description>Partner Account which represents entity signing contract</description>
        <inlineHelpText>Partner Account which represents entity signing contract</inlineHelpText>
        <label>Partner Signing</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Partner Signing)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Position of a person representing the customer</description>
        <inlineHelpText>Position of a person representing the customer</inlineHelpText>
        <label>Position</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Special_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Special Terms will be printed on Contract</description>
        <inlineHelpText>If checked, Special Terms will be printed on Contract</inlineHelpText>
        <label>Print Special Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Opportunity__c</fullName>
        <description>Relation to Regional Opportunity</description>
        <inlineHelpText>Relation to Regional Opportunity</inlineHelpText>
        <label>Regional Opportunity</label>
        <referenceTo>Regional_Opportunity__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>CContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Relation to Request</description>
        <inlineHelpText>Relation to Request</inlineHelpText>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>CContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <description>Technical field; used for generating document number; sequence number of Annex or Service Order</description>
        <inlineHelpText>Technical field; sequence number of Annex or Service Order</inlineHelpText>
        <label>Sequence Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Relation to Installed Product</description>
        <inlineHelpText>Relation to Installed Product</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>CContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Address2__c</fullName>
        <description>Invoicing address assigned to this document</description>
        <inlineHelpText>Invoicing address assigned to this document</inlineHelpText>
        <label>Invoicing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contracts (Invoicing Address)</relationshipLabel>
        <relationshipName>CContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <description>Shipping address selected for this document</description>
        <inlineHelpText>Shipping address selected for this document</inlineHelpText>
        <label>Shipping Address</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Contracts (Shipping Address)</relationshipLabel>
        <relationshipName>CContracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Apartment_No__c</fullName>
        <description>Invoicing Apartment No</description>
        <inlineHelpText>Invoicing Apartment No</inlineHelpText>
        <label>Invoicing Apartment No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Building_Block__c</fullName>
        <description>Invoicing Building/Block</description>
        <inlineHelpText>Invoicing Building/Block</inlineHelpText>
        <label>Invoicing Building/Block</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <description>Invoicing City</description>
        <inlineHelpText>Invoicing City</inlineHelpText>
        <label>Invoicing City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <description>Invoicing Contact</description>
        <inlineHelpText>Invoicing Contact</inlineHelpText>
        <label>Invoicing Contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <description>Invoicing Country</description>
        <inlineHelpText>Invoicing Country</inlineHelpText>
        <label>Invoicing Country</label>
        <picklist>
            <picklistValues>
                <fullName>Aaland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Customer_Name__c</fullName>
        <description>Invoicing Customer Name</description>
        <inlineHelpText>Invoicing Customer Name</inlineHelpText>
        <label>Invoicing Customer Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Floor__c</fullName>
        <description>Invoicing Floor</description>
        <inlineHelpText>Invoicing Floor</inlineHelpText>
        <label>Invoicing Floor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Phone__c</fullName>
        <description>Invoicing Phone</description>
        <inlineHelpText>Invoicing Phone</inlineHelpText>
        <label>Invoicing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal__c</fullName>
        <description>Invoicing Postal</description>
        <inlineHelpText>Invoicing Postal</inlineHelpText>
        <label>Invoicing Postal</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Room_No__c</fullName>
        <description>Invoicing Room No</description>
        <inlineHelpText>Invoicing Room No</inlineHelpText>
        <label>Invoicing Room No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <description>Invoicing State/Province</description>
        <inlineHelpText>Invoicing State/Province</inlineHelpText>
        <label>Invoicing State/Province</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_1__c</fullName>
        <description>Invoicing Street (first part)</description>
        <inlineHelpText>Invoicing Street (first part)</inlineHelpText>
        <label>Invoicing Street 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_2__c</fullName>
        <description>Invoicing Street (second part)</description>
        <inlineHelpText>Invoicing Street (second part)</inlineHelpText>
        <label>Invoicing Street 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_No__c</fullName>
        <description>Invoicing Street No</description>
        <inlineHelpText>Invoicing Street No</inlineHelpText>
        <label>Invoicing Street No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SpecialTerms__c</fullName>
        <description>Special Terms for this Agreement/Annex/Service Order</description>
        <inlineHelpText>Special Terms for this Agreement/Annex/Service Order</inlineHelpText>
        <label>Special Terms</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this document</description>
        <inlineHelpText>Status of this document</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of document: Agreement, Annex or Service Order</description>
        <inlineHelpText>Type of document: Agreement, Annex or Service Order</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Annex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>